--- a/单元测试/mocha-vue/tsconfig.json
+++ b/单元测试/mocha-vue/tsconfig.json
@@ -33,7 +33,8 @@
     "src/**/*.tsx",
     "src/**/*.vue",
     "tests/**/*.ts",
-    "tests/**/*.tsx"
+    "tests/**/*.tsx", 
+    "tests/unit/parser.spec.js"
   ],
   "exclude": [
     "node_modules"
