--- a/单元测试/mocha-vue/package.json
+++ b/单元测试/mocha-vue/package.json
@@ -8,7 +8,9 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@types/sinon": "^9.0.4",
     "core-js": "^3.6.5",
+    "sinon": "^9.0.2",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
