--- a/单元测试/mocha-vue/package.json
+++ b/单元测试/mocha-vue/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@types/sinon": "^9.0.4",
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "moxios": "^0.4.0",
     "sinon": "^9.0.2",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
