--- a/wk/package.json
+++ b/wk/package.json
@@ -1,21 +1,18 @@
 {
   "name": "wk",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "",
+  "main": "1.toStingTag.js",
   "scripts": {
-    "build": "webpack",
-    "dev": "webpack-dev-server --open"
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
-    "css-loader": "^3.6.0",
+    "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^4.3.0",
-    "style-loader": "^1.2.1",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack": "^4.44.0",
+    "webpack-cli": "^3.3.12"
   }
 }
