--- a/webpack/2020nian02qizaixiankuangjiake/webpack01/package.json
+++ b/webpack/2020nian02qizaixiankuangjiake/webpack01/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --mode development",
-    "build": "webpack --mode production"
+    "dev": "webpack",
+    "mydev": "webpack --config webpack.dev.conf.js",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +14,9 @@
   "devDependencies": {
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
+  },
+  "dependencies": {
+    "clean-webpack-plugin": "^3.0.0",
+    "html-webpack-plugin": "^4.3.0"
   }
 }
