--- a/webpack/2020nian02qizaixiankuangjiake/webpack02/package.json
+++ b/webpack/2020nian02qizaixiankuangjiake/webpack02/package.json
@@ -4,17 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --config webpack.config.dev.js",
-    "dev:server": "webpack-dev-server --config webpack.config.dev.js",
-    "build": "webpack-dev-server"
+    "dev": "webpack",
+    "dev:server": "webpack-dev-server",
+    "build": "webpack-dev-server --config webpack.config.dev.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^9.8.6",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.2.2",
     "html-webpack-plugin": "^4.3.0",
+    "less": "^3.12.2",
+    "less-loader": "^7.0.0",
+    "mini-css-extract-plugin": "^0.10.0",
+    "postcss-loader": "^3.0.0",
     "style-loader": "^1.2.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
