--- a/node/danboard-http-server/package.json
+++ b/node/danboard-http-server/package.json
@@ -14,6 +14,9 @@
   },
   "dependencies": {
     "chalk": "^4.1.0",
-    "commander": "^6.1.0"
+    "commander": "^6.1.0",
+    "debug": "^4.1.1",
+    "ejs": "^3.1.5",
+    "mime": "^2.4.6"
   }
 }
